<?xml version="1.0"?>
<package>
  <name>rabbot_bringup</name>
  <version>0.1.0</version>
  <description> This package includes bringup files of the RABBOT </description>
  <maintainer email="viswanath@gaitech.net"> Viswanath </maintainer>
  <maintainer email="shlee@gaitech.kr"> Brighten Lee </maintainer>
  <maintainer email="chenlinkai@gaitech.net"> Leo </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>e100_bringup</run_depend>
  <export>
  </export>
</package>
