<?xml version="1.0"?>
<package>
  <name>rabbot_description</name>
  <version>0.0.0</version>
  <description> This package includes urdf files of RABBOT </description>
  <maintainer email="viswanath@gaitech.net"> Viswanath </maintainer>
  <maintainer email="shlee@gaitech.kr"> Brighten Lee </maintainer>
  <maintainer email="chenlinkai@gaitech.net"> Leo </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
