<?xml version="1.0"?>
<package format="2">
  <name>rabbot_navigation</name>
  <version>0.0.0</version>
  <description> This package includes launch files for slam and navigation </description>
  <maintainer email="viswanath@gaitech.net"> Viswanath </maintainer>
  <maintainer email="shlee@gaitech.kr"> Brighten Lee </maintainer>
  <maintainer email="chenlinkai@gaitech.net"> Leo </maintainer>
  <license>TODO</license> 
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>e100_navigation</exec_depend>
  <export>
  </export>
</package>
